Function tag rename First release of repayments Italian default activity code

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "7937ece2-4881-45ee-8c55-aec9e91ad468",
   "name": "Experience",
   "publisher": "Brayns", 
-  "version": "22.0.30903.0",
+  "version": "22.0.30903.8",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -32,8 +32,11 @@
     "TranslationFile"
   ],
   "preprocessorSymbols": [
-    "FN0001A",
-    "LOCALE-IT"
+    "W1FN001A",
+    "W1FN002A",
+    "W1FN003A",
+    "ITXX001A",
+    "LOCALEIT"
   ],
   "suppressWarnings": [
     "AA0072",
