Improved bulk imported Improved data exchange New functions Initial file storage Initial Italian E-Invoicing Negative bins Suppress commit

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "7937ece2-4881-45ee-8c55-aec9e91ad468",
   "name": "Experience",
   "publisher": "Brayns", 
-  "version": "22.0.30905.0",
+  "version": "22.0.30906.0",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -33,14 +33,19 @@
   ],
   "preprocessorSymbols": [
     "W1XX001A",
-    "W1XX002A",
     "W1XX003A",
     "W1XX004A",
+    "W1XX005A",
+    "W1XX006A",
+    "W1FN005A",
+    "W1FN006A",
     "W1FN001A",
     "W1FN002A",
     "W1FN003A",
     "W1FN004A",
+    "W1WH001A",
     "ITXX001A",
+    "ITXX002A",
     "LOCALEIT"
   ],
   "suppressWarnings": [
