Enhanced RIBA/RID New document exchange logging Document exchange in job queue Improved document exchange references Filesystem implementation Remote function per environment Improved commit management Posting description IT Purchase e-invoice parser Partner group Ledger entry deletion And more...

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "7937ece2-4881-45ee-8c55-aec9e91ad468",
   "name": "Experience",
   "publisher": "Brayns", 
-  "version": "23.0.31004.0",
+  "version": "23.0.31012.0",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -38,18 +38,28 @@
     "W1XX005A",
     "W1XX006A",
     "W1XX007A",
+    "W1XX008A",
+    "W1XX009A",
+    "W1FN010A",
     "W1FN001A",
     "W1FN002A",
     "W1FN003A",
     "W1FN004A",
     "W1FN005A",
-    "W1FN006A",
-    "W1FN007A",
     "W1FN008A",
+    "W1FN009A",
+    "W1PU001A",
+    "W1JB001A",
+    "W1SA001A",
+    "W1SA002A",
     "W1WH001A",
     "ITXX001A",
     "ITXX002A",
     "ITXX003A",
+    "ITXX004A",
+    "ITXX005A",
+    "ITXX006A",
+    "ITXX007A",    
     "LOCALEIT"
   ],
   "suppressWarnings": [
